--- a/package.json
+++ b/package.json
@@ -34,21 +34,21 @@
   },
   "dependencies": {
     "blanket": "1.1.6",
-    "coveralls": "2.11.2",
+    "coveralls": "^3.0.2",
     "lcov-parse": "0.0.9",
     "lodash.defaults": "3.0.0",
     "mkdirp": "0.5.0",
-    "mocha": "2.2.1",
+    "mocha": "^5.2.0",
     "mocha-lcov-reporter": "0.0.2",
-    "request": "2.53.0"
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "chai": "2.1.2",
-    "coffee-script": "1.9.1",
-    "grunt": "0.4.5",
-    "grunt-cli": "0.1.13",
+    "coffeescript": "^2.3.2",
+    "grunt": "^1.0.3",
+    "grunt-cli": "^1.3.2",
     "grunt-contrib-jshint": "0.11.1",
-    "mocha-term-cov-reporter": "0.2.0",
+    "mocha-term-cov-reporter": "^0.2.3",
     "should": "5.2.0"
   },
   "peerDependencies": {
