--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "grunt": "^1.0.3",
     "grunt-cli": "^1.3.2",
     "grunt-contrib-jshint": "0.11.1",
-    "mocha-term-cov-reporter": "^0.2.3",
+    "mocha-term-cov-reporter": "git+https://github.com/gawaooooo-sandbox/mocha-term-cov-reporter.git",
     "should": "5.2.0"
   },
   "peerDependencies": {
