--- a/package.json
+++ b/package.json
@@ -33,23 +33,23 @@
     "node": ">= 0.10.0"
   },
   "dependencies": {
-    "blanket": "1.1.6",
+    "blanket": "^1.1.9",
     "coveralls": "^3.0.2",
-    "lcov-parse": "0.0.9",
-    "lodash.defaults": "3.0.0",
-    "mkdirp": "0.5.0",
-    "mocha": "^5.2.0",
-    "mocha-lcov-reporter": "0.0.2",
+    "lcov-parse": "1.0.0",
+    "lodash.defaults": "4.2.0",
+    "mkdirp": "0.5.1",
+    "mocha": "^2.5.3",
+    "mocha-lcov-reporter": "1.3.0",
     "request": "^2.88.0"
   },
   "devDependencies": {
-    "chai": "2.1.2",
+    "chai": "4.2.0",
     "coffeescript": "^2.3.2",
     "grunt": "^1.0.3",
     "grunt-cli": "^1.3.2",
-    "grunt-contrib-jshint": "0.11.1",
+    "grunt-contrib-jshint": "2.0.0",
     "mocha-term-cov-reporter": "git+https://github.com/gawaooooo-sandbox/mocha-term-cov-reporter.git",
-    "should": "5.2.0"
+    "should": "13.2.3"
   },
   "peerDependencies": {
     "grunt": ">=0.4.0"
